@@ -1,15 +1,17 @@
 package illiyin.mhandharbeni.visualize.navpackage.mainnav.group.room.fragment;
 
 import android.content.Context;
+import android.content.Intent;
 import android.graphics.Bitmap;
 import android.graphics.Canvas;
+import android.net.Uri;
 import android.os.Bundle;
+import android.provider.Settings;
 import android.support.constraint.ConstraintLayout;
 import android.support.v4.app.Fragment;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
-import android.widget.Toast;
 
 import com.google.android.gms.maps.CameraUpdateFactory;
 import com.google.android.gms.maps.GoogleMap;
@@ -19,9 +21,8 @@ import com.google.android.gms.maps.OnMapReadyCallback;
 import com.google.android.gms.maps.model.BitmapDescriptorFactory;
 import com.google.android.gms.maps.model.LatLng;
 import com.google.android.gms.maps.model.LatLngBounds;
-import com.google.android.gms.maps.model.Marker;
 import com.google.android.gms.maps.model.MarkerOptions;
-import com.squareup.picasso.NetworkPolicy;
+import com.google.firebase.crash.FirebaseCrash;
 import com.squareup.picasso.Picasso;
 
 import de.hdodenhof.circleimageview.CircleImageView;
@@ -43,29 +44,40 @@ public class MapsList extends Fragment implements OnMapReadyCallback, SessionLis
     private Integer id;
     private Session session;
     private LatLngBounds.Builder builder;
-    private MarkerOptions marker;
+
     @Override
     public View onCreateView(LayoutInflater inflater, ViewGroup container,
                              Bundle savedInstanceState) {
-        fetch_extras();
-        fetch_module();
         View v = inflater.inflate(R.layout.__navactivity_mainnav_layout_group_maps, container,
                 false);
-        mMapView = (MapView) v.findViewById(R.id.mapView);
+        mMapView = v.findViewById(R.id.mapView);
         mMapView.onCreate(savedInstanceState);
+        return v;
+    }
+
+    @Override
+    public void onStart() {
+        super.onStart();
+        fetch_extras();
+        fetch_module();
 
         mMapView.onResume();
 
         try {
             MapsInitializer.initialize(getActivity().getApplicationContext());
         } catch (Exception e) {
+            FirebaseCrash.report(e);
             e.printStackTrace();
         }
 
         mMapView.getMapAsync(this);
 
-        return v;
+        if (!session.getToken().equalsIgnoreCase("nothing")){
+            turnGPSOn();
+        }
+
     }
+
     private void fetch_module(){
         session = new Session(getActivity().getApplicationContext(), this);
         builder = new LatLngBounds.Builder();
@@ -83,20 +95,20 @@ public class MapsList extends Fragment implements OnMapReadyCallback, SessionLis
 
     @Override
     public void onPause() {
-        super.onPause();
         mMapView.onPause();
+        super.onPause();
     }
 
     @Override
     public void onDestroy() {
-        super.onDestroy();
         mMapView.onDestroy();
+        super.onDestroy();
     }
 
     @Override
     public void onLowMemory() {
-        super.onLowMemory();
         mMapView.onLowMemory();
+        super.onLowMemory();
     }
 
     @Override
@@ -104,36 +116,36 @@ public class MapsList extends Fragment implements OnMapReadyCallback, SessionLis
         this.googleMaps = googleMap;
         fetch_marker();
     }
-    private void create_marker(GoogleMap googleMap, Double latitude, Double longitude, String name){
-        LatLng latLng = new LatLng(latitude, longitude);
+
+    private void preparePinView (String url, final GoogleMap mMap, final LatLng latLng, final String title, final Boolean leader) throws NullPointerException {
         builder.include(latLng);
-        marker = new MarkerOptions().position(
-                new LatLng(latitude, longitude)).title(name);
-        marker.icon(BitmapDescriptorFactory
-                .defaultMarker(BitmapDescriptorFactory.HUE_ROSE));
-        googleMap.addMarker(marker);
-    }
-    private View preparePinView (String url, final GoogleMap mMap, final LatLng latLng, final String title) {
-        builder.include(latLng);
-        final View marker = ((LayoutInflater) getActivity().getSystemService(Context.LAYOUT_INFLATER_SERVICE)).inflate(R.layout.marker_view, null);
+        final View marker;
+        if (leader){
+            assert getActivity().getSystemService(Context.LAYOUT_INFLATER_SERVICE) != null;
+            marker = ((LayoutInflater) getActivity().getSystemService(Context.LAYOUT_INFLATER_SERVICE)).inflate(R.layout.marker_view_leader, null);
+        }else{
+            assert getActivity().getSystemService(Context.LAYOUT_INFLATER_SERVICE) != null;
+            marker = ((LayoutInflater) getActivity().getSystemService(Context.LAYOUT_INFLATER_SERVICE)).inflate(R.layout.marker_view, null);
+        }
         final CircleImageView profileimage = marker.findViewById(R.id.profileimage);
         Picasso.with(getActivity().getApplicationContext()).load(url).into(profileimage, new com.squareup.picasso.Callback(){
             @Override
             public void onSuccess() {
-                Bitmap markerMember = createDrawableFromView(getActivity().getApplicationContext(), marker);
-                Marker pinMarker = mMap.addMarker(new MarkerOptions()
-                        .position(latLng)
-                        .title(title)
-                        .icon(BitmapDescriptorFactory.fromBitmap(markerMember)));
+                try {
+                    Bitmap markerMember = createDrawableFromView(getActivity().getApplicationContext(), marker);
+                    mMap.addMarker(new MarkerOptions()
+                            .position(latLng)
+                            .title(title)
+                            .icon(BitmapDescriptorFactory.fromBitmap(markerMember)));
+                }catch (Exception e){
+                    FirebaseCrash.report(e);
+                }
             }
             @Override
             public void onError() {
-
-                Toast.makeText(getActivity().getApplicationContext(), "Error On Picasso", Toast.LENGTH_SHORT).show();
             }
         });
 
-        return marker;
     }
     public static Bitmap createDrawableFromView(Context context, View view) {
         view.setLayoutParams(new ConstraintLayout.LayoutParams(ConstraintLayout.LayoutParams.WRAP_CONTENT, ConstraintLayout.LayoutParams.WRAP_CONTENT));
@@ -155,30 +167,60 @@ public class MapsList extends Fragment implements OnMapReadyCallback, SessionLis
         LatLngBounds bounds = builder.build();
         googleMap.animateCamera(CameraUpdateFactory.newLatLngBounds(bounds, width, height, padding));
     }
+    private void turnGPSOn(){
+        String provider = Settings.Secure.getString(getActivity().getContentResolver(), Settings.Secure.LOCATION_PROVIDERS_ALLOWED);
+
+        if(!provider.contains("gps")){ //if gps is disabled
+            startActivity(new Intent(android.provider.Settings.ACTION_LOCATION_SOURCE_SETTINGS).setFlags(Intent.FLAG_ACTIVITY_NEW_TASK));
+            final Intent poke = new Intent();
+            poke.setClassName("com.android.settings", "com.android.settings.widget.SettingsAppWidgetProvider");
+            poke.addCategory(Intent.CATEGORY_ALTERNATIVE);
+            poke.setData(Uri.parse("3"));
+            getActivity().sendBroadcast(poke);
+        }
+    }
     private void fetch_marker(){
         googleMaps.clear();
         MemberLocationModel mlm = new MemberLocationModel();
-        Crud crud = new Crud(getActivity().getApplicationContext(), mlm);
+        Crud crud = new Crud(getContext(), mlm);
         RealmResults results = crud.read("id_grup", id);
         Boolean fetchZoom = false;
         if (results.size()>0){
             for (int i=0;i<results.size();i++){
                 MemberLocationModel resultLocation = (MemberLocationModel) results.get(i);
+
                 double lats, longs;
                 try {
-                    lats = new Double(resultLocation.getLatitude());
-                    longs =new Double(resultLocation.getLongitude());
+                    Boolean leader = false;
+                    assert resultLocation != null;
+                    if (resultLocation.getType_member().equalsIgnoreCase("Leader")){
+                        leader = true;
+                    }
+                    lats = Double.valueOf(resultLocation.getLatitude());
+                    longs =Double.valueOf(resultLocation.getLongitude());
                     LatLng latLng = new LatLng(lats, longs);
-                    preparePinView(resultLocation.getImage(), googleMaps, latLng, resultLocation.getNama());
+                    try {
+                        preparePinView(resultLocation.getImage(), googleMaps, latLng, resultLocation.getNama(), leader);
+                    }catch (NullPointerException | IllegalArgumentException e){
+                        FirebaseCrash.report(e);
+                        if (session.getToken().equalsIgnoreCase("nothing")){
+                            turnGPSOn();
+                        }
+                    }
+
                     fetchZoom = true;
-                } catch (NumberFormatException e) {
-                    lats = 0;
-                    longs = 0;
+                } catch (Exception e) {
+                    FirebaseCrash.report(e);
                     fetchZoom = false;
                 }
             }
             if (fetchZoom){
-                fetch_zoom(googleMaps);
+                try {
+                    fetch_zoom(googleMaps);
+                }catch (Exception e){
+                    FirebaseCrash.report(e);
+                    e.printStackTrace();
+                }
             }
         }
     }
